@@ -3,9 +3,10 @@
 <h1><a id="logo" href="/">Hockeypuck</a></h1>
 <div id="topmenu">
 	<ul>
-		<li><span class="menu-label">Find People:</span></li>
-		<li><a href="/">OpenPGP</a></li>
-		<li><span class="menu-label">Find Machines:</span></li>
+		<li><span class="menu-label">OpenPGP:</span></li>
+		<li><a href="/">Search</a></li>
+		<li><a href="/add">Add</a></li>
+		<li><span class="menu-label">Machines:</span></li>
 		<li><span class="todo-link">SSH</span></li>
 		<li><span class="todo-link">SSL/TLS</span></li>
 		<li class="about"><a href="https://launchpad.net/hockeypuck">Project Home</a></li>
